# shiyin-player

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TESTING.md  diff.txt
.claude/: index.json
.claude/plan/: fix-audit-issues.md  fix-critical-major-issues.md  fix-dynamic-theme-shared-layout-1.md  fix-dynamic-theme-shared-layout.md  fix-minor-issues.md  fix-netease-lyrics-api.md  fix-qqmusic-webview-cookie-unauthorized.md  performance-optimization.md  qqmusic-playlist-implementation.md  rust-music-player.md  wbs-11-features.md  wbs-implementation-part2.md  wbs-implementation.md  webview-login.md
.claude/review/: 2026-02-28-refactor-review.md
.claude/team-plan/: fix-showoff-features.md
.context/history/: commits.jsonl  commits.md
.github/workflows/: release.yml
apps/rustplayer-tauri/frontend/: CLAUDE.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/rustplayer-tauri/frontend/src/: App.tsx  index.css  vite-env.d.ts
apps/rustplayer-tauri/frontend/src/components/common/: BackButton.tsx  ContextMenu.tsx  CoverImage.tsx  ErrorBoundary.tsx  HorizontalScroll.tsx  SourceBadge.tsx  ToastContainer.tsx  TrackRow.tsx  VirtualTrackList.tsx
apps/rustplayer-tauri/frontend/src/components/layout/: PlayerBar.tsx  Sidebar.tsx
apps/rustplayer-tauri/frontend/src/components/player/: FMControlBar.tsx  FullscreenVisualizer.tsx  ImmersiveBackground.tsx  ImmersiveControls.tsx  ImmersiveCover.tsx  ImmersiveFMPanel.tsx  ImmersiveLyrics.tsx  ImmersiveTrackInfo.tsx  LyricsPanel.tsx  ParticleSystem.tsx  PlaybackProgress.tsx  QueuePanel.tsx  SpectrumVisualizer.tsx  VizModeSwitcher.tsx
apps/rustplayer-tauri/frontend/src/components/recommend/: ArtistCard.tsx  SectionSkeleton.tsx  TrackCard.tsx
apps/rustplayer-tauri/frontend/src/hooks/: useAutoHide.ts  useDynamicTheme.ts  useFocusTrap.ts  usePlaylistAutoRefresh.ts
apps/rustplayer-tauri/frontend/src/lib/: errorMessages.ts  ipc.ts  settings.ts  utils.ts
apps/rustplayer-tauri/frontend/src/store/: fmStore.ts  playerStore.ts  playlistStore.ts  recommendStore.ts  toastStore.ts  uiStore.ts  visualizerStore.ts
apps/rustplayer-tauri/frontend/src/styles/: theme.css
apps/rustplayer-tauri/frontend/src/views/: DailyRecommendView.tsx  HomeView.tsx  PlaylistDetailView.tsx  SearchView.tsx  SettingsView.tsx
apps/rustplayer-tauri/src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
apps/rustplayer-tauri/src-tauri/capabilities/: default.json
apps/rustplayer-tauri/src-tauri/src/: db.rs  events.rs  logging.rs  main.rs  store.rs  trace_ctx.rs
apps/rustplayer-tauri/src-tauri/src/commands/: mod.rs
crates/cache/: CLAUDE.md  Cargo.toml
crates/cache/src/: lib.rs
crates/core/: CLAUDE.md  Cargo.toml
crates/core/src/: lib.rs
crates/netease/: CLAUDE.md  Cargo.toml
crates/netease/src/: api.rs  crypto.rs  lib.rs
crates/player/: CLAUDE.md  Cargo.toml
crates/player/src/: lib.rs
crates/qqmusic/: CLAUDE.md  Cargo.toml
crates/qqmusic/src/: api.rs  lib.rs  sign.rs
crates/recommend/: CLAUDE.md  Cargo.toml
crates/recommend/src/: lib.rs  normalize.rs  profile.rs  rerank.rs  suggest.rs
crates/sources/: CLAUDE.md  Cargo.toml
crates/sources/src/: lib.rs
docs/design/: immersive-fm-mode.md
