[package]
name = "rustplayer-netease"
version = "0.1.0"
edition = "2021"

[dependencies]
rustplayer-core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
async-trait = "0.1"
aes = "0.8"
cbc = "0.1"
rsa = "0.9"
base64 = "0.22"
rand = "0.8"
log = "0.4"
