[package]
name = "rustplayer-qqmusic"
version = "0.1.0"
edition = "2021"

[dependencies]
rustplayer-core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
async-trait = "0.1"
md-5 = "0.10"
rand = "0.8"
