[package]
name = "rustplayer-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
rustplayer-core = { path = "../../../crates/core" }
rustplayer-player = { path = "../../../crates/player" }
rustplayer-sources = { path = "../../../crates/sources" }
rustplayer-netease = { path = "../../../crates/netease" }
rustplayer-qqmusic = { path = "../../../crates/qqmusic" }
rustplayer-cache = { path = "../../../crates/cache" }
rusqlite = { version = "0.31", features = ["bundled"] }
