[package]
name = "rustplayer-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
rustplayer-core = { path = "../../../crates/core" }
rustplayer-player = { path = "../../../crates/player" }
rustplayer-sources = { path = "../../../crates/sources" }
rustplayer-netease = { path = "../../../crates/netease" }
rustplayer-qqmusic = { path = "../../../crates/qqmusic" }
rustplayer-cache = { path = "../../../crates/cache" }
rustplayer-recommend = { path = "../../../crates/recommend" }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
log = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
futures-util = "0.3"
bytes = "1"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }
gio = "0.18"
glib = "0.18"
soup = { version = "0.5", package = "soup3" }
